--- a/ProyectoVideojuegos/ProyectoVideojuegos.csproj
+++ b/ProyectoVideojuegos/ProyectoVideojuegos.csproj
@@ -204,6 +204,12 @@
     <Compile Include="Vista\MuestraJuego.Designer.cs">
       <DependentUpon>MuestraJuego.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Prestamos\FormDevolver.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Prestamos\FormDevolver.Designer.cs">
+      <DependentUpon>FormDevolver.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Prestamos\FormPrestar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -265,6 +271,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\MuestraJuego.resx">
       <DependentUpon>MuestraJuego.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Prestamos\FormDevolver.resx">
+      <DependentUpon>FormDevolver.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Prestamos\FormPrestar.resx">
       <DependentUpon>FormPrestar.cs</DependentUpon>
